structured data fixes

--- a/site/faq.njk
+++ b/site/faq.njk
@@ -8,9 +8,8 @@ meta_description:
 body_class: home
 title: Welcome to Skeleventy!
 ---
-
 <main id="main" class="" tabindex="-1">
-  <section class="" itemscope="itemscope" itemtype="https://schema.org/FAQPage">
+  <section class="px-x1p5">
     <h1 class="text-primary text-x6 leading-tight mb-x2 border-solid">
       Häufig gestellte Fragen
     </h1>
