--- a/site/includes/components/home/5-recent-reviews.njk
+++ b/site/includes/components/home/5-recent-reviews.njk
@@ -21,7 +21,7 @@
 			{% endfor %}
 
 		</div>
-		<a rel="prefetch" href="/reviews" class="text-x2 md:text-x0p5 underline mb-x3 md:mb-x1" title="Reviews aufrufen">
+		<a href="/reviews" class="text-x2 md:text-x0p5 underline mb-x3 md:mb-x1" title="Reviews aufrufen">
 			Alle Bewertungen ansehen
 		</a>
 	</div>
