--- a/site/includes/components/home/12-faq-teaser.njk
+++ b/site/includes/components/home/12-faq-teaser.njk
@@ -1,6 +1,6 @@
 {% from "components/youtube.njk" import youtube %}
 
-<section id="ueber-mich" class=" px-x1p5 pb-x3 md:py-x2 w-100 md:flex relative items-center">
+<section id="ueber-mich" class=" px-x1p5 pb-x3 md:py-x2 w-100 relative items-center">
     <h1 class="text-primary text-x6 leading-tight mb-x2 border-solid">
       Häufig gestellte Fragen
     </h1>
@@ -11,5 +11,7 @@
         {% endif %}
 	{% endfor %}
     </div>
-	<a href="/faq">Alle FAQs ansehen</a>
+	<a href="/faq" class="text-x2 md:text-x0p5 underline block md:mb-x1 text-center" title="FAQs aufrufen">
+			Alle FAQs ansehen
+		</a>
 </section>
