--- a/site/includes/components/youtube.njk
+++ b/site/includes/components/youtube.njk
@@ -1,5 +1,8 @@
 {% macro youtube(videoId, title) %}
-	<div class="iframe-container mb-x1">
+	<div class="iframe-container mb-x1"style="overflow: hidden;
+    padding-top: 56.25%;
+    position: relative;
+    width: 100%;">
 		<iframe title={{ title }} src="https://www.youtube-nocookie.com/embed/{{ videoId }}?rel=0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="w-full"/>
 	</div>
 {% endmacro %}
