--- a/site/includes/components/header.njk
+++ b/site/includes/components/header.njk
@@ -21,7 +21,7 @@
 				<div class="mobile-icon md:hidden w-x1p5 h-x1">
 					<div class="middle-line"></div>
 				</div>
-				<div class="mobile-menu relative md:relative bg-light md:bg-transparent top-0 w-screen block px-x1p5 pb-x2 mt-x3 -mx-x1p5 md:mt-0 md:py-x0p5 md:mb-0 md:flex md:items-center md:w-auto">
+				<div class="hidden mobile-menu relative md:relative bg-light md:bg-transparent top-0 w-screen block px-x1p5 pb-x2 mt-x3 -mx-x1p5 md:mt-0 md:py-x0p5 md:mb-0 md:flex md:items-center md:w-auto">
 					<div class="text-x3 md:text-x0p75 lg:text-x0p25 md:flex-grow">
 						<a rel="prefetch" href="/faq" title="FAQs aufrufen" class="block mt-4 md:inline-block md:mt-0 text-primary hover:text-primary mr-x0p5 hover:underline">
 							FAQ
