--- a/site/includes/components/home/3-as-it-should-be.njk
+++ b/site/includes/components/home/3-as-it-should-be.njk
@@ -2,8 +2,8 @@
 	import Image from "../Image.svelte";
 </script>
 #}
-<section class="md:relative overflow-hidden md:h-screen">
-	<div class="float-right md:w-1/2 px-x1p5 py-x3 md:p-x1p5 bg-secondary text-white md:mt-x2 md:mx-x1p5 md:relative md:z-10">
+<section class="md:relative overflow-hidden">
+	<div class="float-right md:w-1/2 px-x1p5 py-x3 md:p-x1p5 bg-secondary text-white md:mt-x2 md:mb-x3 md:mx-x1p5 md:relative md:z-10">
 		<h3 class="text-x5 md:text-x1p5 mb-x1 leading-tight md:mb-x0p5 font-medium ">
 			Instrumentenversicherung so,
 			<!-- <br class="md:hidden" /> -->
