--- a/site/includes/components/review-item-reduced.njk
+++ b/site/includes/components/review-item-reduced.njk
@@ -1,4 +1,4 @@
-<div class=" text-light text-x2 md:text-x0p5 border-solid border-0 border-t-2 border-primary pt-x0p5">
+<div class="text-light text-x2 md:text-x0p5 border-solid border-0 border-t-2 border-primary pt-x0p5">
 	<div class="md:flex items-center my-x0p5 md:m-0 ">
 		{% include "components/star-rating-simple.njk" %}
 		<span class="flex mt-x0p5 md:mt-0 md:text-x0p25 opacity-75">
@@ -6,7 +6,7 @@
 			<span class="hidden md:inline">&nbsp;</span>
 			von&nbsp;
 			<span>
-				<p class="text-light">{{ review.name }}</p>
+				<p >{{ review.name }}</p>
 			</span>
 			&nbsp;am&nbsp;
 			<p>{{ review.date | dateDisplay }}</p>
