--- a/site/includes/components/home/11-video.njk
+++ b/site/includes/components/home/11-video.njk
@@ -1,10 +1,10 @@
 {% from "components/youtube.njk" import youtube %}
 
 <section id="ueber-mich" class=" px-x1p5 pb-x3 md:py-x2 w-100 md:flex relative items-center">
-	<div class="video-container -mr-x1p5 -ml-x1p5 mb-x2 md:m-0 w-full h-full">
+	<div class="video-container -mr-x1p5 -ml-x1p5 mb-x2 md:m-0 w-full">
 	{{ youtube(videoId='F2IZ9GeyaSs', title='Heiner Blaskewitz von B!-Das Versicherungsbüro stellt sich vor') }}
 	</div>
-	<div class="bg-secondary md:p-x1 md:relative md:z-0 md:flex flex-col mw-x5 md:w-1/2">
+	<div class="bg-secondary md:p-x1 md:relative md:z-0 md:flex flex-col md:w-1/2">
 		<h3 class="text-x6 text-primary md:text-light md:text-x1 mb-x1 leading-tight md:mb-x0p5 font-medium whitespace-no-wrap">
 			Wer ist der Typ hinter
 			<br/>
