--- a/site/includes/layouts/default.njk
+++ b/site/includes/layouts/default.njk
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de" class="min-h-full antialiased">
+<html lang="de" class="min-h-full">
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -78,7 +78,7 @@
         {# include
     header #}
         {% include "components/header.njk" %}
-        <div class="mt-x1 relative z-0" id="main">
+        <div class="" id="main">
             {# include content #}
             {{ content | safe }}
 
