--- a/css/main.css
+++ b/css/main.css
@@ -1381,6 +1381,12 @@ input[type=checkbox].invalid + span {
   }
 }
 
+@media (max-width: 768px) {
+  .mobile-bg {
+    background: linear-gradient(0deg, black, transparent);
+  }
+}
+
 .space-y-0 > :not(template) ~ :not(template){
   --space-y-reverse: 0;
   margin-top: calc(0px * calc(1 - var(--space-y-reverse)));
