--- a/css/main.css
+++ b/css/main.css
@@ -1381,6 +1381,10 @@ input[type=checkbox].invalid + span {
   }
 }
 
+.iframe-container {
+  padding-top: 56.25%;
+}
+
 @media (max-width: 768px) {
   .mobile-bg {
     background: linear-gradient(0deg, black, transparent);
