--- a/site/includes/components/home/10-more-advantages.njk
+++ b/site/includes/components/home/10-more-advantages.njk
@@ -1,5 +1,5 @@
 <section class="md:flex px-x1p5 py-x3 md:py-x1 md:text-light text-x2 md:text-x0p25">
-	<div class="flex-1 bg-primary md:p-x1p5 md:w-1/2 md:mr-x1 mb-x3 md:mb-0">
+	<div class="flex-1 md:bg-primary md:p-x1p5 md:w-1/2 md:mr-x1 mb-x3 md:mb-0">
 		<h3 class="text-x6 text-primary md:text-light md:text-x1 mb-x1 leading-tight md:mb-x0p5 font-medium ">
 			Schützt weltweit,
 			<br/>
@@ -12,7 +12,7 @@
 		</p>
 	</div>
 
-	<div class="flex-1 bg-secondary md:p-x1p5 md:w-1/2">
+	<div class="flex-1 md:bg-secondary md:p-x1p5 md:w-1/2">
 		<h3 class="text-x6 text-secondary md:text-light md:text-x1 mb-x1 leading-tight md:mb-x0p5 font-medium ">
 			Schnelle Abwicklung
 		</h3>
