--- a/site/includes/components/youtube.njk
+++ b/site/includes/components/youtube.njk
@@ -1,6 +1,5 @@
 {% macro youtube(videoId, title) %}
-	<div class="iframe-container mb-x1 relative w-full overflow-hidden" style="
-    padding-top: 56.25%;">
+	<div class="iframe-container mb-x1 relative w-full overflow-hidden">
 		<iframe title={{ title }} src="https://www.youtube-nocookie.com/embed/{{ videoId }}?rel=0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="absolute inset-0 w-full h-full"/>
 	</div>
 {% endmacro %}
